# aiospotify

./: .gitignore  pyproject.toml  setup.py
docs/: conf.py  index.rst
docs/pages/: api.rst  contributing.rst
spotify/: __init__.py  client.py  errors.py  http.py  utils.py
spotify/models/: __init__.py  album.py  archetypes.py  artist.py  image.py  playback.py  playlist.py  track.py  user.py
spotify/oauth/: __init__.py  enums.py  scopes.py
