[tool.poetry]
name = "aio-spotify"
version = "0.1.0a"
description = ""
authors = ["Void-ux"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yarl = "^1.8.2"
aiohttp = "^3.8.3"
typing-extensions = "^4.7.1"

[tool.poetry.dev-dependencies]
furo = "^2022.12.7"
sphinxcontrib-trio = "^1.1.2"

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode="strict"
reportUnusedImport = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.ruff]
line-length = 125

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
